@@ -1,4 +1,4 @@
-/*
+/**
  * Copyright 2016 Netflix, Inc.
  * <p>
  * Licensed under the Apache License, Version 2.0 (the "License");
@@ -13,15 +13,18 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+/**
+ *
+ */
 package com.netflix.conductor.core.execution;
 
 import com.google.common.annotations.VisibleForTesting;
 import com.netflix.conductor.common.metadata.tasks.Task;
 import com.netflix.conductor.common.metadata.tasks.Task.Status;
 import com.netflix.conductor.common.metadata.tasks.TaskDef;
+import com.netflix.conductor.common.metadata.workflow.TaskType;
 import com.netflix.conductor.common.metadata.workflow.WorkflowDef;
 import com.netflix.conductor.common.metadata.workflow.WorkflowTask;
-import com.netflix.conductor.common.metadata.workflow.WorkflowTask.Type;
 import com.netflix.conductor.common.run.Workflow;
 import com.netflix.conductor.common.run.Workflow.WorkflowStatus;
 import com.netflix.conductor.common.utils.ExternalPayloadStorage;
@@ -30,7 +33,6 @@ import com.netflix.conductor.core.execution.mapper.TaskMapperContext;
 import com.netflix.conductor.core.utils.ExternalPayloadStorageUtils;
 import com.netflix.conductor.core.utils.IDGenerator;
 import com.netflix.conductor.core.utils.QueueUtils;
-import com.netflix.conductor.dao.MetadataDAO;
 import com.netflix.conductor.dao.QueueDAO;
 import com.netflix.conductor.metrics.Monitors;
 import org.apache.commons.lang3.StringUtils;
@@ -48,7 +50,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
-import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
@@ -69,8 +70,6 @@ public class DeciderService {
 
     private static Logger logger = LoggerFactory.getLogger(DeciderService.class);
 
-    private final MetadataDAO metadataDAO;
-
     private final QueueDAO queueDAO;
 
     private final ParametersUtils parametersUtils;
@@ -79,15 +78,13 @@ public class DeciderService {
 
     private final ExternalPayloadStorageUtils externalPayloadStorageUtils;
 
-
     @SuppressWarnings("ConstantConditions")
     private final Predicate<Task> isNonPendingTask = task -> !task.isRetried() && !task.getStatus().equals(SKIPPED) && !task.isExecuted() || SystemTaskType.isBuiltIn(task.getTaskType());
 
     @Inject
-    public DeciderService(MetadataDAO metadataDAO, ParametersUtils parametersUtils, QueueDAO queueDAO,
+    public DeciderService(ParametersUtils parametersUtils, QueueDAO queueDAO,
                           ExternalPayloadStorageUtils externalPayloadStorageUtils,
                           @Named("TaskMappers") Map<String, TaskMapper> taskMappers) {
-        this.metadataDAO = metadataDAO;
         this.queueDAO = queueDAO;
         this.parametersUtils = parametersUtils;
         this.taskMappers = taskMappers;
@@ -95,9 +92,8 @@ public class DeciderService {
     }
 
     //QQ public method validation of the input params
-    public DeciderOutcome decide(Workflow workflow, WorkflowDef workflowDef) throws TerminateWorkflowException {
+    public DeciderOutcome decide(Workflow workflow) throws TerminateWorkflowException {
 
-        workflow.setSchemaVersion(workflowDef.getSchemaVersion());
         //In case of a new workflow the list of tasks will be empty
         final List<Task> tasks = workflow.getTasks();
         //In case of a new workflow the list of executedTasks will also be empty
@@ -108,15 +104,15 @@ public class DeciderService {
         List<Task> tasksToBeScheduled = new LinkedList<>();
         if (executedTasks.isEmpty()) {
             //this is the flow that the new workflow will go through
-            tasksToBeScheduled = startWorkflow(workflow, workflowDef);
+            tasksToBeScheduled = startWorkflow(workflow);
             if (tasksToBeScheduled == null) {
                 tasksToBeScheduled = new LinkedList<>();
             }
         }
-        return decide(workflowDef, workflow, tasksToBeScheduled);
+        return decide(workflow, tasksToBeScheduled);
     }
 
-    private DeciderOutcome decide(final WorkflowDef workflowDef, final Workflow workflow, List<Task> preScheduledTasks) throws TerminateWorkflowException {
+    private DeciderOutcome decide(final Workflow workflow, List<Task> preScheduledTasks) throws TerminateWorkflowException {
 
         DeciderOutcome outcome = new DeciderOutcome();
 
@@ -131,7 +127,7 @@ public class DeciderService {
             return outcome;
         }
 
-        // Filter the list of tasks and include only tasks that are not retried, not executed,
+        // Filter the list of tasks and include only tasks that are not retried, not executed
         // marked to be skipped and not part of System tasks that is DECISION, FORK, JOIN
         // This list will be empty for a new workflow being started
         List<Task> pendingTasks = workflow.getTasks()
@@ -147,10 +143,11 @@ public class DeciderService {
                 .map(Task::getReferenceTaskName)
                 .collect(Collectors.toSet());
 
-        //Traverse the pre-scheduled tasks to a linkedHasMap
-        Map<String, Task> tasksToBeScheduled = preScheduledTasks.stream()
-                .collect(Collectors.toMap(Task::getReferenceTaskName, Function.identity(),
-                        (element1, element2) -> element2, LinkedHashMap::new));
+        Map<String, Task> tasksToBeScheduled = new LinkedHashMap<>();
+
+        preScheduledTasks.forEach(preScheduledTask -> {
+            tasksToBeScheduled.put(preScheduledTask.getReferenceTaskName(), preScheduledTask);
+        });
 
         // A new workflow does not enter this code branch
         for (Task pendingTask : pendingTasks) {
@@ -160,24 +157,25 @@ public class DeciderService {
                 executedTaskRefNames.remove(pendingTask.getReferenceTaskName());
             }
 
-            TaskDef taskDefinition = metadataDAO.getTaskDef(pendingTask.getTaskDefName());
-            if (taskDefinition != null) {
-                checkForTimeout(taskDefinition, pendingTask);
+            Optional<TaskDef> taskDefinition = pendingTask.getTaskDefinition();
+
+            if (taskDefinition.isPresent()) {
+                checkForTimeout(taskDefinition.get(), pendingTask);
                 // If the task has not been updated for "responseTimeoutSeconds" then mark task as TIMED_OUT
-                if (isResponseTimedOut(taskDefinition, pendingTask)) {
-                    timeoutTask(taskDefinition, pendingTask);
+                if (isResponseTimedOut(taskDefinition.get(), pendingTask)) {
+                    timeoutTask(taskDefinition.get(), pendingTask);
                 }
             }
 
             if (!pendingTask.getStatus().isSuccessful()) {
                 WorkflowTask workflowTask = pendingTask.getWorkflowTask();
                 if (workflowTask == null) {
-                    workflowTask = workflowDef.getTaskByRefName(pendingTask.getReferenceTaskName());
+                    workflowTask = workflow.getWorkflowDefinition().getTaskByRefName(pendingTask.getReferenceTaskName());
                 }
                 if (workflowTask != null && workflowTask.isOptional()) {
                     pendingTask.setStatus(COMPLETED_WITH_ERRORS);
                 } else {
-                    Task retryTask = retry(taskDefinition, workflowTask, pendingTask, workflow);
+                    Task retryTask = retry(taskDefinition.orElse(null), workflowTask, pendingTask, workflow);
                     tasksToBeScheduled.put(retryTask.getReferenceTaskName(), retryTask);
                     executedTaskRefNames.remove(retryTask.getReferenceTaskName());
                     outcome.tasksToBeUpdated.add(pendingTask);
@@ -186,13 +184,14 @@ public class DeciderService {
 
             if (!pendingTask.isExecuted() && !pendingTask.isRetried() && pendingTask.getStatus().isTerminal()) {
                 pendingTask.setExecuted(true);
-                List<Task> nextTasks = getNextTask(workflowDef, workflow, pendingTask);
+                List<Task> nextTasks = getNextTask(workflow, pendingTask);
                 nextTasks.forEach(nextTask -> tasksToBeScheduled.putIfAbsent(nextTask.getReferenceTaskName(), nextTask));
                 outcome.tasksToBeUpdated.add(pendingTask);
-                logger.debug("Scheduling Tasks from {}, next = {} for workflow: {}", pendingTask.getTaskDefName(),
+                logger.debug("Scheduling Tasks from {}, next = {} for workflowId: {}", pendingTask.getTaskDefName(),
                         nextTasks.stream()
                                 .map(Task::getTaskDefName)
-                                .collect(Collectors.toList()), workflow.getWorkflowId());
+                                .collect(Collectors.toList()),
+                        workflow.getWorkflowId());
             }
         }
 
@@ -203,10 +202,11 @@ public class DeciderService {
         if (!unScheduledTasks.isEmpty()) {
             logger.debug("Scheduling Tasks {} for workflow: {}", unScheduledTasks.stream()
                     .map(Task::getTaskDefName)
-                    .collect(Collectors.toList()), workflow.getWorkflowId());
+                    .collect(Collectors.toList()),
+                    workflow.getWorkflowId());
             outcome.tasksToBeScheduled.addAll(unScheduledTasks);
         }
-        if (outcome.tasksToBeScheduled.isEmpty() && checkForWorkflowCompletion(workflowDef, workflow)) {
+        if (outcome.tasksToBeScheduled.isEmpty() && checkForWorkflowCompletion(workflow)) {
             logger.debug("Marking workflow as complete.  workflow=" + workflow.getWorkflowId() + ", tasks=" + workflow.getTasks());
             outcome.isComplete = true;
         }
@@ -214,7 +214,8 @@ public class DeciderService {
         return outcome;
     }
 
-    private List<Task> startWorkflow(Workflow workflow, WorkflowDef workflowDef) throws TerminateWorkflowException {
+    private List<Task> startWorkflow(Workflow workflow) throws TerminateWorkflowException {
+        final WorkflowDef workflowDef = workflow.getWorkflowDefinition();
 
         logger.debug("Starting workflow " + workflowDef.getName() + "/" + workflow.getWorkflowId());
         //The tasks will be empty in case of new workflow
@@ -226,14 +227,15 @@ public class DeciderService {
                 throw new TerminateWorkflowException("No tasks found to be executed", WorkflowStatus.COMPLETED);
             }
 
-            WorkflowTask taskToSchedule = workflowDef.getTasks().getFirst(); //Nothing is running yet - so schedule the first task
-            //Loop until a non-skipped task is found
+            WorkflowTask taskToSchedule = workflowDef.getTasks().get(0); //Nothing isSystemTask running yet - so schedule the first task
+            //Loop until a non-skipped task isSystemTask found
+
             while (isTaskSkipped(taskToSchedule, workflow)) {
                 taskToSchedule = workflowDef.getNextTask(taskToSchedule.getTaskReferenceName());
             }
 
             //In case of a new workflow a the first non-skippable task will be scheduled
-            return getTasksToBeScheduled(workflowDef, workflow, taskToSchedule, 0);
+            return getTasksToBeScheduled(workflow, taskToSchedule, 0);
         }
 
         // Get the first task to schedule
@@ -253,6 +255,7 @@ public class DeciderService {
                 });
 
         return Collections.singletonList(rerunFromTask);
+
     }
 
     /**
@@ -269,11 +272,12 @@ public class DeciderService {
         }
 
         Task last = Optional.ofNullable(task).orElse(allTasks.get(allTasks.size() - 1));
-        WorkflowDef def = metadataDAO.get(workflow.getWorkflowType(), workflow.getVersion());
+
+        WorkflowDef workflowDef = workflow.getWorkflowDefinition();
         Map<String, Object> output;
-        if (!def.getOutputParameters().isEmpty()) {
+        if (workflowDef.getOutputParameters() != null && !workflowDef.getOutputParameters().isEmpty()) {
             Workflow workflowInstance = populateWorkflowAndTaskData(workflow);
-            output = parametersUtils.getTaskInput(def.getOutputParameters(), workflowInstance, null, null);
+            output = parametersUtils.getTaskInput(workflowDef.getOutputParameters(), workflowInstance, null, null);
         } else if (StringUtils.isNotBlank(last.getExternalOutputPayloadStoragePath())) {
             output = externalPayloadStorageUtils.downloadPayload(last.getExternalOutputPayloadStoragePath());
             Monitors.recordExternalPayloadStorageUsage(last.getTaskDefName(), ExternalPayloadStorage.Operation.READ.toString(), ExternalPayloadStorage.PayloadType.TASK_OUTPUT.toString());
@@ -285,8 +289,7 @@ public class DeciderService {
         externalPayloadStorageUtils.verifyAndUpload(workflow, ExternalPayloadStorage.PayloadType.WORKFLOW_OUTPUT);
     }
 
-    private boolean checkForWorkflowCompletion(final WorkflowDef def, final Workflow workflow) throws TerminateWorkflowException {
-
+    private boolean checkForWorkflowCompletion(final Workflow workflow) throws TerminateWorkflowException {
         List<Task> allTasks = workflow.getTasks();
         if (allTasks.isEmpty()) {
             return false;
@@ -295,8 +298,8 @@ public class DeciderService {
         Map<String, Status> taskStatusMap = new HashMap<>();
         workflow.getTasks().forEach(task -> taskStatusMap.put(task.getReferenceTaskName(), task.getStatus()));
 
-        LinkedList<WorkflowTask> wftasks = def.getTasks();
-        boolean allCompletedSuccessfully = wftasks.stream().parallel().allMatch(wftask -> {
+        List<WorkflowTask> workflowTasks = workflow.getWorkflowDefinition().getTasks();
+        boolean allCompletedSuccessfully = workflowTasks.stream().parallel().allMatch(wftask -> {
             Status status = taskStatusMap.get(wftask.getTaskReferenceName());
             return status != null && status.isSuccessful() && status.isTerminal();
         });
@@ -306,14 +309,16 @@ public class DeciderService {
                 .allMatch(Status::isTerminal);
 
         boolean noPendingSchedule = workflow.getTasks().stream().parallel().filter(wftask -> {
-            String next = getNextTasksToBeScheduled(def, workflow, wftask);
+            String next = getNextTasksToBeScheduled(workflow, wftask);
             return next != null && !taskStatusMap.containsKey(next);
         }).collect(Collectors.toList()).isEmpty();
 
         return allCompletedSuccessfully && noPendingTasks && noPendingSchedule;
     }
 
-    private List<Task> getNextTask(WorkflowDef def, Workflow workflow, Task task) {
+    @VisibleForTesting
+    List<Task> getNextTask(Workflow workflow, Task task) {
+        final WorkflowDef workflowDef = workflow.getWorkflowDefinition();
 
         // Get the following task after the last completed task
         if (SystemTaskType.is(task.getTaskType()) && SystemTaskType.DECISION.name().equals(task.getTaskType())) {
@@ -323,18 +328,19 @@ public class DeciderService {
         }
 
         String taskReferenceName = task.getReferenceTaskName();
-        WorkflowTask taskToSchedule = def.getNextTask(taskReferenceName);
+        WorkflowTask taskToSchedule = workflowDef.getNextTask(taskReferenceName);
         while (isTaskSkipped(taskToSchedule, workflow)) {
-            taskToSchedule = def.getNextTask(taskToSchedule.getTaskReferenceName());
+            taskToSchedule = workflowDef.getNextTask(taskToSchedule.getTaskReferenceName());
         }
         if (taskToSchedule != null) {
-            return getTasksToBeScheduled(def, workflow, taskToSchedule, 0);
+            return getTasksToBeScheduled(workflow, taskToSchedule, 0);
         }
 
         return Collections.emptyList();
     }
 
-    private String getNextTasksToBeScheduled(WorkflowDef def, Workflow workflow, Task task) {
+    private String getNextTasksToBeScheduled(Workflow workflow, Task task) {
+        final WorkflowDef def = workflow.getWorkflowDefinition();
 
         String taskReferenceName = task.getReferenceTaskName();
         WorkflowTask taskToSchedule = def.getNextTask(taskReferenceName);
@@ -350,6 +356,7 @@ public class DeciderService {
         int retryCount = task.getRetryCount();
         if (!task.getStatus().isRetriable() || SystemTaskType.isBuiltIn(task.getTaskType()) || taskDefinition == null || taskDefinition.getRetryCount() <= retryCount) {
             WorkflowStatus status = task.getStatus().equals(TIMED_OUT) ? WorkflowStatus.TIMED_OUT : WorkflowStatus.FAILED;
+            updateWorkflowOutput(workflow, task);
             throw new TerminateWorkflowException(task.getReasonForIncompletion(), status, task);
         }
 
@@ -376,6 +383,9 @@ public class DeciderService {
         rescheduled.setStatus(SCHEDULED);
         rescheduled.setPollCount(0);
         rescheduled.setInputData(new HashMap<>());
+        rescheduled.getInputData().putAll(task.getInputData());
+
+
         if (StringUtils.isNotBlank(task.getExternalInputPayloadStoragePath())) {
             rescheduled.setExternalInputPayloadStoragePath(task.getExternalInputPayloadStoragePath());
         } else {
@@ -405,7 +415,7 @@ public class DeciderService {
         if (StringUtils.isNotBlank(workflow.getExternalInputPayloadStoragePath())) {
             // download the workflow input from external storage here and plug it into the workflow
             Map<String, Object> workflowInputParams = externalPayloadStorageUtils.downloadPayload(workflow.getExternalInputPayloadStoragePath());
-            Monitors.recordExternalPayloadStorageUsage(workflow.getWorkflowType(), ExternalPayloadStorage.Operation.READ.toString(), ExternalPayloadStorage.PayloadType.WORKFLOW_INPUT.toString());
+            Monitors.recordExternalPayloadStorageUsage(workflow.getWorkflowName(), ExternalPayloadStorage.Operation.READ.toString(), ExternalPayloadStorage.PayloadType.WORKFLOW_INPUT.toString());
             workflowInstance.setInput(workflowInputParams);
             workflowInstance.setExternalInputPayloadStoragePath(null);
         }
@@ -465,11 +475,14 @@ public class DeciderService {
 
     @VisibleForTesting
     boolean isResponseTimedOut(TaskDef taskDefinition, Task task) {
-
         if (taskDefinition == null) {
             logger.warn("missing task type : {}, workflowId= {}", task.getTaskDefName(), task.getWorkflowInstanceId());
             return false;
         }
+        if (task.getStatus().isTerminal() || !task.getStatus().equals(IN_PROGRESS) || taskDefinition.getResponseTimeoutSeconds() == 0) {
+            return false;
+        }
+
         if (!task.getStatus().equals(IN_PROGRESS) || taskDefinition.getResponseTimeoutSeconds() == 0) {
             return false;
         }
@@ -502,43 +515,39 @@ public class DeciderService {
         task.setReasonForIncompletion(reason);
     }
 
-    public List<Task> getTasksToBeScheduled(WorkflowDef workflowDef, Workflow workflow,
+    public List<Task> getTasksToBeScheduled(Workflow workflow,
                                             WorkflowTask taskToSchedule, int retryCount) {
-        return getTasksToBeScheduled(workflowDef, workflow, taskToSchedule, retryCount, null);
+        return getTasksToBeScheduled(workflow, taskToSchedule, retryCount, null);
     }
 
-    public List<Task> getTasksToBeScheduled(WorkflowDef workflowDefinition, Workflow workflow,
+    public List<Task> getTasksToBeScheduled(Workflow workflow,
                                             WorkflowTask taskToSchedule, int retryCount, String retriedTaskId) {
-
-        Workflow workflowInstance = populateWorkflowAndTaskData(workflow);
+        workflow = populateWorkflowAndTaskData(workflow);
         Map<String, Object> input = parametersUtils.getTaskInput(taskToSchedule.getInputParameters(),
-                workflowInstance, null, null);
+                workflow, null, null);
 
-        Type taskType = Type.USER_DEFINED;
+        TaskType taskType = TaskType.USER_DEFINED;
         String type = taskToSchedule.getType();
-        if (Type.isSystemTask(type)) {
-            taskType = Type.valueOf(type);
+        if (TaskType.isSystemTask(type)) {
+            taskType = TaskType.valueOf(type);
         }
 
         // get in progress tasks for this workflow instance
-        List<String> inProgressTasks = workflowInstance.getTasks().stream()
+        List<String> inProgressTasks = workflow.getTasks().stream()
                 .filter(runningTask -> runningTask.getStatus().equals(Status.IN_PROGRESS))
                 .map(Task::getReferenceTaskName)
                 .collect(Collectors.toList());
 
-        TaskDef taskDef = Optional.ofNullable(taskToSchedule.getName())
-                .map(metadataDAO::getTaskDef)
-                .orElse(null);
-
+        String taskId = IDGenerator.generate();
         TaskMapperContext taskMapperContext = TaskMapperContext.newBuilder()
-                .withWorkflowDefinition(workflowDefinition)
-                .withWorkflowInstance(workflowInstance)
-                .withTaskDefinition(taskDef)
+                .withWorkflowDefinition(workflow.getWorkflowDefinition())
+                .withWorkflowInstance(workflow)
+                .withTaskDefinition(taskToSchedule.getTaskDefinition())
                 .withTaskToSchedule(taskToSchedule)
                 .withTaskInput(input)
                 .withRetryCount(retryCount)
                 .withRetryTaskId(retriedTaskId)
-                .withTaskId(IDGenerator.generate())
+                .withTaskId(taskId)
                 .withDeciderService(this)
                 .build();
 
@@ -554,22 +563,24 @@ public class DeciderService {
 
     private boolean isTaskSkipped(WorkflowTask taskToSchedule, Workflow workflow) {
         try {
-            boolean retval = false;
+            boolean isTaskSkipped = false;
             if (taskToSchedule != null) {
                 Task t = workflow.getTaskByRefName(taskToSchedule.getTaskReferenceName());
                 if (t == null) {
-                    retval = false;
+                    isTaskSkipped = false;
                 } else if (t.getStatus().equals(SKIPPED)) {
-                    retval = true;
+                    isTaskSkipped = true;
                 }
             }
-            return retval;
+            return isTaskSkipped;
         } catch (Exception e) {
             throw new TerminateWorkflowException(e.getMessage());
         }
+
     }
 
-    static class DeciderOutcome {
+
+    public static class DeciderOutcome {
 
         List<Task> tasksToBeScheduled = new LinkedList<>();
 
@@ -581,5 +592,6 @@ public class DeciderService {
 
         private DeciderOutcome() {
         }
+
     }
 }
